2024-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Use actions/checkout@v5

2024-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.9

	* DESCRIPTION (OS_type): Reset package to Unix-only

	* man/RApiDatetime-package.Rd: Avoid nags on empty entries

2023-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.8

	* src/datetime.c (formatPOSIXlt): Replace one sprintf with snprintf
	* src/datetime.h: Minor sync from R sources

	* DESCRIPTION: Minor edits

	* README.md: Edit codecov badge URL

2022-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.7

2022-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/Rstrptime.h (dt_invalidate_locale): Add void for prototype

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

	* README.md: Update several http:// URLs to https://

2021-08-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.6

	* tests/version.R: Add test for matching version in inst/NEWS.Rd

2021-08-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version and date

2021-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/datetime.c: Account for __sunos

2021-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.5

	* README.md: Update/correct one URL

2021-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/datetime.c: Synchronised with r-devel version
	* src/Rstrptime.h: Idem

	* src/Makevars.win (PKG_CFLAGS): Added

	* .github/workflows/ci.yaml (jobs): Re-enable coverage

2021-07-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version

	* src/datetime.c: Remove R_tzname[2] also removed upstream

2021-04-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugRreports): Added to DESCRIPTION file

2020-12-30  Dirk Eddelbuettel  <edd@debian.org>
