@@ -1,6 +1,7 @@
 2024-01-24  Dirk Eddelbuettel  <edd@debian.org>
 
-	* .github/workflows/ci.yaml (jobs): Use actions/checkout@v5
+	* .github/workflows/ci.yaml (jobs): Use actions/checkout@v5, switch
+	to eddelbuettel/github-actions/r-ci-setup@master
 
 2024-01-23  Dirk Eddelbuettel  <edd@debian.org>
 
